--- a/io.core/package.json
+++ b/io.core/package.json
@@ -46,6 +46,7 @@
     "react": "^0.13.3",
     "react-favicon": "0.0.3",
     "react-hot-loader": "^1.2.7",
+    "react-router": "^2.0.0-rc5",
     "sass-loader": "^1.0.2",
     "sinon": "^1.15.3",
     "style-loader": "^0.12.3",
