--- a/io.core/package.json
+++ b/io.core/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "nodemon server/index.js --watch server",
-    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base build", 
+    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base build",
     "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base build",
     "build": "rm build/*; ./node_modules/.bin/webpack --config ./webpack-prod.config.js --progress --colors && cp -R build/* ../",
     "start": "node server/index.js",
@@ -27,6 +27,7 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.5.8",
+    "classnames": "^2.2.3",
     "css-loader": "^0.14.5",
     "expect": "^1.6.0",
     "file-loader": "^0.8.4",
