--- a/io.core/package.json
+++ b/io.core/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "nodemon server/index.js --watch server",
-    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base build",
-    "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base build",
-    "build": "rm build/*; ./node_modules/.bin/webpack --config ./webpack-prod.config.js --progress --colors && cp -R build/* ../",
+    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base .",
+    "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base .",
+    "build": "./node_modules/.bin/webpack --config ./webpack-prod.config.js --progress --colors",
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
