Added script to generate JSON listings of files
Since cannot access dir, this is a simple workaround

--- a/io.core/package.json
+++ b/io.core/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base .",
     "build": "./node_modules/.bin/webpack --config ./webpack-prod.config.js --progress --colors",
     "start": "node server/index.js",
+    "gen-content-listings": "./node_modules/.bin/json-dir-listing -R -s 0 ../Content/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "html-webpack-plugin": "^1.5.2",
     "image-webpack-loader": "^1.6.1",
     "imports-loader": "^0.6.5",
+    "json-dir-listing": "^0.1.2",
     "karma": "^0.12.36",
     "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
