--- a/io.core/package.json
+++ b/io.core/package.json
@@ -26,10 +26,13 @@
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
     "babel-core": "^5.5.8",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.5.8",
     "classnames": "^2.2.3",
     "css-loader": "^0.14.5",
+    "eslint": "^2.1.0",
+    "eslint-plugin-react": "^3.16.1",
     "expect": "^1.6.0",
     "exports-loader": "^0.6.2",
     "fetch-polyfill": "^0.8.2",
