--- a/io.core/package.json
+++ b/io.core/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "nodemon server/index.js --watch server",
-    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base .",
-    "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base .",
+    "dev-web": "webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base ..",
+    "dev": "nodemon server/index.js --watch server & webpack-dev-server --config ./webpack-dev.config.js --hot --progress --colors --content-base ..",
     "build": "./node_modules/.bin/webpack --config ./webpack-prod.config.js --progress --colors",
     "start": "node server/index.js",
-    "gen-content-listings": "./node_modules/.bin/json-dir-listing -R -s 1 -o listing.json ../Content/",
+    "gen-content-listings": "./node_modules/.bin/json-dir-listing -R -b ../ -o listing.json ../Content/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,7 +40,7 @@
     "html-webpack-plugin": "^1.5.2",
     "image-webpack-loader": "^1.6.1",
     "imports-loader": "^0.6.5",
-    "json-dir-listing": "^0.1.2",
+    "json-dir-listing": "^0.2.1",
     "karma": "^0.12.36",
     "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
