--- a/io.core/package.json
+++ b/io.core/package.json
@@ -48,6 +48,7 @@
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.5.1",
+    "marked": "^0.3.5",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
@@ -55,7 +56,7 @@
     "react": "^0.13.3",
     "react-favicon": "0.0.3",
     "react-hot-loader": "^1.2.7",
-    "react-router": "^2.0.0-rc5",
+    "react-router": "^2.0.0",
     "sass-loader": "^1.0.2",
     "sinon": "^1.15.3",
     "style-loader": "^0.12.3",
